--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap");
+ @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap");
 
 * {
     box-sizing: border-box;
 }
 
 body {
-    background: #ece9e6;
+    background: #f8f6f4;
     background: -webkit-linear-gradient(to right, #ffffff, #ece9e6);
     background: linear-gradient(to right, #ffffff, #ece9e6);
     display: flex;
@@ -21,11 +21,11 @@ img {
 }
 
 .mobile-container {
-    background-color: #fff;
+    background-color: rgba(217, 121, 18, 0.879);
     box-shadow: 0 0 10px 2px #3333331a;
     border-radius: 3px;
     overflow: hidden;
-    width: 400px;
+    width: 500px;
 }
 
 header {
@@ -36,7 +36,8 @@ header {
 }
 
 header input {
-    background-color: #eee;
+    color: aqua;
+    background-color: rgb(16, 15, 15);
     border: none;
     border-radius: 3px;
     font-family: inherit;
@@ -44,9 +45,9 @@ header input {
 }
 
 header button {
-    background-color: transparent;
+    background-color:rgb(185, 185, 192);
     border: none;
-    color: rgb(138, 129, 141);
+    color: rgb(20, 19, 20);
     height: 10%;
     width: 10%;
     font-size: 1.5rem;
@@ -54,7 +55,7 @@ header button {
 }
 
 .fav-container {
-    background-color: rgb(243, 225, 255);
+    background-color: rgba(155, 248, 49, 0.808);
     padding: 0.25rem 1rem;
     text-align: center;
 }
